  * checks/debhelper:
    + [FL] Also check for debhelper build-dependency in debhelper-using
      cdbs based packages
    + [FL] Indicate where we found which compat version in
      declares-possibly-conflicting-debhelper-compat-versions
      (Closes: #329953)
    + [FL] Add dh_installtexfonts to list of commands that modfiy
      the maintainer scripts
  * checks/fields:
    + [FL] Allow version numbers of 0 by correctly checking the output
      of _valid_version for definedness and not the boolean value
      (Closes: #345005)
    + [FL] Better check for false postives of build-depends-without-arch-dep.
      Should fix false positives for cdbs, dbs, dpatch and yada. Based on
      a patch by Russ Allbery (Closes: #344609, #321135, #339750)
    + [FL] Also check for build-dependencies on obsolete packages not
      only dependencies (Closes: #234531)
  * checks/fields.desc:
    + [JvW] Fix typo in description
  * checks/init.d:
    + [FL] Only try to validate update-rc.d calls where the name of the
      script matches [\w.-]+. That accounts for all today known init
      scripts and eliminates false positives like shell variables in the
      name (Closes: #343865)
  * checks/manpages:
    + [FL] Fix stupid mistake in regex to strip of filenames from roff
      output (which was hidden by another stupid mistake in the test
      suite). Patch by Nicolas François (Closes: #347999)
  * checks/scripts:
    + [FL] Make mknod-in-maintainer-script an error since this is now
      a must in policy. Pointed out by Bartosz Fenski (Closes: #344928)
    + [FL] dpkg --print-installation-architecture is deprecated
      so delete dpkg-print-architecture-in-maintainer-script
    + [FL] Add parrot to list of valid interpreters (Closes: #346335)

 -- Frank Lichtenheld <djpig@debian.org>  Wed,  4 Jan 2006 16:02:50 +0100

lintian (1.23.14) unstable; urgency=low
  
  * The "fix those frontend regressions" release

  * frontend/lintian: